[tool.poetry]
name = "python-bpspatcher"
version = "0.1.0"
description = ""
authors = ["Mark Gius <mgius7096@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
